force-app/main/default/objects/Event__c/Event__c.object-meta.xml
<CustomObject>
    <description>Enter Informations about Event</description>
    <label>Event</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Event</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>