force-app/main/default/objects/Event__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <description>Enter End Date/Time</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter End Date/Time</inlineHelpText>
    <label>End</label>
    <type>DateTime</type>
</CustomField>