force-app/main/default/objects/Event__c/fields/Live__c.field-meta.xml
<CustomField>
    <fullName>Live__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enter Event is live or not</description>
    <inlineHelpText>Gives Information about Event is live or not</inlineHelpText>
    <label>Live</label>
    <type>Checkbox</type>
</CustomField>