force-app/main/default/objects/Event__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Enter your name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter your name</inlineHelpText>
    <label>Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>