force-app/main/default/objects/Event__c/fields/Recurring__c.field-meta.xml
<CustomField>
    <fullName>Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enter Event is Recurring or not</description>
    <inlineHelpText>Provides infomation about recurring of event</inlineHelpText>
    <label>Recurring</label>
    <type>Checkbox</type>
</CustomField>