force-app/main/default/objects/Event__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <description>Enter Start Date-Time</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter Start Date-Time</inlineHelpText>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>