force-app/main/default/objects/Event__c/validationRules/Event_Type_InPerson.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Type_InPerson</fullName>
    <active>true</active>
    <description>If Event Type field value is In-Person then user must select Location on Event Record</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Event_Type__c, &apos;In-Person&apos;),
    ISBLANK(Location__c)
)</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>If Event Type field value is In-Person then user must select Location on Event Record</errorMessage>
</ValidationRule>