force-app/main/default/objects/Event__c/validationRules/Event_Type_Virtual.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Type_Virtual</fullName>
    <active>true</active>
    <description>If Virtual is Selected as Value for Event Type field, then user not allowed to Select Location on Event Record</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Event_Type__c, &apos;Virtual&apos;),
    NOT(ISBLANK(Location__c))
)</errorConditionFormula>
    <errorMessage>If Virtual is Selected for Event Type field, the not allowed to enter location.</errorMessage>
</ValidationRule>