force-app/main/default/objects/Event__c/validationRules/Recurring_Checkbox.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_Checkbox</fullName>
    <active>true</active>
    <description>If Recurring checkbox is checked then user need to fill Frequency checkbox, is unchecked then User cannot select Frequency field</description>
    <errorConditionFormula>IF(
    Recurring__c, 
    ISBLANK(TEXT(Frequency__c)), 
    NOT(ISBLANK(TEXT(Frequency__c)))
)</errorConditionFormula>
    <errorMessage>Error Occurs</errorMessage>
</ValidationRule>